# SpectreScan

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.py  setup.sh
.github/: copilot-instructions.md
benchmarks/: nmap_comparison.py
spectrescan/: __init__.py  __main__.py
spectrescan/api/: __init__.py  auth.py  main.py  models.py
spectrescan/assets/: __init__.py  logo.txt
spectrescan/benchmarks/: phase1_benchmark.py
spectrescan/cli/: __init__.py  main.py  perf_commands.py  template_commands.py  vulndb_commands.py
spectrescan/core/: __init__.py  app_fingerprinting.py  async_scan.py  banner_parser.py  banners.py  checkpoint.py  comparison.py  config.py  connection_pool.py  cve_matcher.py  database_updater.py  detailed_reports.py  dns_enum.py  error_recovery.py  evasion.py  history.py  host_discovery.py  memory_optimizer.py  network_monitor.py  nmap_output.py  nse_engine.py  os_detect.py  os_detection_enhanced.py  performance.py  presets.py  probe_parser.py  profiles.py  progress_tracker.py  proxy.py  resource_limiter.py  scanner.py  scheduler.py  script_manager.py  scripting_engine.py  service_detection.py  signature_cache.py  ssl_analyzer.py  syn_scan.py  timing_engine.py  udp_scan.py  (+4 more)
spectrescan/data/: __init__.py  cpe-dictionary.json  database_metadata.json  nmap-service-probes  service-signatures.json  subdomains-medium.txt  subdomains-small.txt  version-patterns.json
spectrescan/distributed/: __init__.py  cluster.py  master.py  models.py  queue.py  worker.py
spectrescan/gui/: __init__.py  (+1 more)
(+117 files in other folders)
